// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ layout / Horizontal ] #Horizontal when 'Horizontal' Default is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 0px;"
  />
</DocumentFragment>
`;

exports[`[ layout / Horizontal ] #Horizontal when 'Horizontal' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 0px;"
  />
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 5px;"
  />
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 15px;"
  />
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 20px;"
  />
  <div
    class="spacer horizontal is-playground"
    style="height: 100px; max-height: 100px; width: 40px;"
  />
</DocumentFragment>
`;
